@@ -113,6 +113,23 @@
 						</label>
 					</td>
 				</tr>
+				<tr>
+					<td><label><?php _e( 'Text Color', 'CP_TD' ); ?></label></td>
+					<td>
+						<label for="meta_cert_text_color">
+						</label>
+						<input
+							type="text"
+							name="meta_cert_text_color"
+							id="meta_cert_text_color"
+							class="certificate-color-picker"
+							value="<?php echo esc_attr($certificate['text_color']); ?>"/>
+					</td>
+					<?php
+						wp_enqueue_script( 'wp-color-picker' );
+						wp_enqueue_style( 'wp-color-picker' );
+					?>
+				</tr>
 			</table>
 		</div>
 	</div>
