@@ -7,6 +7,7 @@ CHANGELOG
 
 = 2.0.8 =
 -------------------------------------------------
+* Added: Text color option for course certificate.
 
 = 2.0.7 =
 -------------------------------------------------
